objects/agf__ADM_Team_Dependency__c.object
<CustomObject>
    <description>Used to track dependencies between teams for a given  release</description>
    <fields>
        <fullName>agf__Associated_with_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated with Program</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Team Dependencies (Associated with Program)</relationshipLabel>
        <relationshipName>Associated_Team_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Deliver_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the deliverable is needed by a specific date, indicate that in this field.</inlineHelpText>
        <label>Needed by (date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Deliverable__c</fullName>
        <description>Short description of the work that is needed from the other team.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short description (255 chars max) of the work that is needed from the other team. More detailed description can be added to the Notes field.</inlineHelpText>
        <label>Deliverable</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Dependency_Size__c</fullName>
        <inlineHelpText>- Small: requires up to 1 sprint to complete work by 1 resource ^M
- Medium: requires 1 month to complete work by 1-2 resources ^M
- Large: requires 1 release to complete work by &gt; 2 resources</inlineHelpText>
        <label>Dependency Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Dependency_Status__c</fullName>
        <inlineHelpText>The status of this dependency.

Prioritized = Deliverable has a user story and is prioritized on the backlog.

Committed = Team is confident the work can be done in the needed timeframe and PO committed to maintaining the priority of the deliverable.</inlineHelpText>
        <label>Dependency Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>More Info Needed</fullName>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Dependent_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team that is dependent on another team to provide the deliverable.</description>
        <inlineHelpText>The team that is dependent on another team to provide the deliverable.</inlineHelpText>
        <label>Team With Dependency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Team With Dependency you selected is not active.</errorMessage>
            <filterItems>
                <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Dependencies we have on other teams</relationshipLabel>
        <relationshipName>Our_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Dependent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The work that is dependent on the completion of the specified deliverable.</description>
        <inlineHelpText>The work that is dependent on the completion of  the specified deliverable.</inlineHelpText>
        <label>Work With Dependency</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Team Dependencies needed for this work</relationshipLabel>
        <relationshipName>Team_Dependencies_For_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Epic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Epic</label>
        <referenceTo>agf__ADM_Epic__c</referenceTo>
        <relationshipLabel>Team Dependencies</relationshipLabel>
        <relationshipName>Team_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Notes__c</fullName>
        <description>Notes concerning the dependency or deliverable (e.g. why it is needed, acceptance criteria, more detailed description, etc.)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes concerning the dependency or deliverable (e.g. why it is needed, acceptance criteria, more detailed description, etc.)</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provider_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team that will provide the deliverable to fulfill this dependency.</description>
        <inlineHelpText>The team that will provide the deliverable to fulfill this dependency.</inlineHelpText>
        <label>Team Providing Deliverable</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Team Providing Deliverable you selected is not active.</errorMessage>
            <filterItems>
                <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Dependencies other teams have on us</relationshipLabel>
        <relationshipName>Dependencies_on_us</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Provider_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The record representing the work to satisfy the deliverable of this dependency.</description>
        <inlineHelpText>The record representing the work to satisfy the deliverable of this dependency.</inlineHelpText>
        <label>Work For Deliverable</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Team Dependencies on this work</relationshipLabel>
        <relationshipName>Team_Dependencies_On_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Target_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The build in which you would like the deliverable completed.</description>
        <inlineHelpText>The build in which you would like the deliverable completed. If the deliverable is not associated with a specific build, enter the major product release corresponding to the season in which this deliverable is needed (e.g. 162 - Winter &apos;10).</inlineHelpText>
        <label>Target Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Team Dependencies</relationshipLabel>
        <relationshipName>Team_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__User_Story_Position_on_Backlog__c</fullName>
        <formula>agf__Provider_User_Story__r.agf__Priority_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The position of the work on the backlog of the team doing the work.</inlineHelpText>
        <label>Work Position on Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__User_Story_Scheduled_Release__c</fullName>
        <formula>NULLVALUE( agf__Provider_User_Story__r.agf__Scheduled_Build__r.Name,&quot;Not Scheduled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The build in which the work is scheduled to be completed.</inlineHelpText>
        <label>Work Scheduled Build</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Story_Scheduled_Sprint__c</fullName>
        <formula>NULLVALUE(agf__Provider_User_Story__r.agf__Sprint__r.Name, &quot;Not Scheduled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sprint in which the work is scheduled to be completed.</inlineHelpText>
        <label>Work Scheduled Sprint</label>
        <type>Text</type>
    </fields>
    <label>Team Dependency</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__CSS_UI_Dependencies</fullName>
        <columns>agf__Deliverable__c</columns>
        <columns>NAME</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>CSS UI</value>
        </filters>
        <label>CSS UI Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__Oppty2Quote_Dependencies</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Dependency_Status__c</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>Opportunity to Quote</value>
        </filters>
        <filters>
            <field>agf__Provider_Team__c</field>
            <operation>equals</operation>
            <value>Opportunity to Quote</value>
        </filters>
        <label>Oppty2Quote Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__SFA_UI_Dependencies_on_other_Teams</fullName>
        <columns>NAME</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Notes__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Dependent_User_Story__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>SFA UI</value>
        </filters>
        <label>162 SFA UI Dependencies Needed</label>
    </listViews>
    <listViews>
        <fullName>agf__Webstore_Dependencies</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Notes__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Dependent_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>Webstore</value>
        </filters>
        <filters>
            <field>agf__Provider_Team__c</field>
            <operation>equals</operation>
            <value>Webstore</value>
        </filters>
        <label>Webstore Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__X160_Team_Dependencies</fullName>
        <columns>NAME</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>160 Team Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_Core_Team_Dependencies</fullName>
        <columns>NAME</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>Core Infrastructure</value>
        </filters>
        <label>162 Core Team Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_Dependencies</fullName>
        <columns>NAME</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>162 Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_SFA_UI_Dependencies_Needed</fullName>
        <columns>NAME</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Notes__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <columns>agf__Dependent_User_Story__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>equals</operation>
            <value>SFA UI</value>
        </filters>
        <label>SFA UI Dependencies Needed</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_Team_Dependencies</fullName>
        <columns>NAME</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>162 Team Dependencies</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_Team_Dependencies1</fullName>
        <columns>NAME</columns>
        <columns>agf__Dependent_Team__c</columns>
        <columns>agf__Deliverable__c</columns>
        <columns>agf__Deliver_By__c</columns>
        <columns>agf__Provider_Team__c</columns>
        <columns>agf__Provider_User_Story__c</columns>
        <columns>agf__Dependency_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Dependent_Team__c</field>
            <operation>contains</operation>
            <value>Knowledge</value>
        </filters>
        <label>162 Knowledge Dependencies</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000000}</displayFormat>
        <label>Team Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Check_Provider_User_Story</fullName>
        <active>true</active>
        <description>In order for the dependency status to be changed to &apos;Prioritized&apos; or &apos;Committed&apos;, there must be a user story linked to the dependency for the work to be done .</description>
        <errorConditionFormula>(ISPICKVAL( agf__Dependency_Status__c, &quot;Prioritized&quot;) ||  ISPICKVAL( agf__Dependency_Status__c, &quot;Committed&quot;)) &amp;&amp; (ISBLANK(agf__Provider_User_Story__c))</errorConditionFormula>
        <errorDisplayField>agf__Provider_User_Story__c</errorDisplayField>
        <errorMessage>A user story for the deliverable must be linked to the dependency in order to set the dependency status to &quot;Prioritized&quot; or &quot;Committed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Dependent_Team_Is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Dependent_Team__r.agf__Active__c = false</errorConditionFormula>
        <errorDisplayField>agf__Dependent_Team__c</errorDisplayField>
        <errorMessage>The Team With Dependency you selected is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Needed_By_Date_in_Future</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Deliver_By__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>agf__Deliver_By__c</errorDisplayField>
        <errorMessage>The &apos;Needed By&apos; date cannot be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Provider_Team_Is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Provider_Team__r.agf__Active__c = false</errorConditionFormula>
        <errorDisplayField>agf__Provider_Team__c</errorDisplayField>
        <errorMessage>The Team Providing Deliverable you selected is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Teams_Cannot_Be_The_Same</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Provider_Team__c = agf__Dependent_Team__c</errorConditionFormula>
        <errorMessage>Team Providing Deliverable and Team With Dependency cannot be the same!</errorMessage>
    </validationRules>
</CustomObject>